--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <section class="content mt-5">
         <div class="container">
             <div class="justify-content-between">
-                <h2>List Kelas</h2>
-                <p>Pilih dari 130.000 online video courses yang baru diterbitkan</p>
+                <h2 class="list-title">List Kelas</h2>
+                <p class="list-text">Pilih dari 130.000 online video courses yang baru diterbitkan</p>
                 <hr>
             </div>
             <div class="row">
