--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <hr>
             </div>
             <div class="row">
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -211,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -233,7 +233,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -266,7 +266,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 d-flex my-2">
+                <div class="col-6 col-md-3 d-flex my-1">
                     <div class="card">
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -292,19 +292,91 @@
         </div>
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
                 </li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
                 </li>
             </ul>
         </nav>
     </section>
     <!-- content end-->
+
+    <!-- jumbotron start -->
+    <div class="jumbotron jumbotron-fluid jmbt-instructor">
+        <div class="container">
+            <h1 class="display-4">Ayo menjadi Instruktur</h1>
+            <p class="lead">Instruktur top dari indonesia yang mengajar jutaan siswa di Buildyourskill. Kami memberikan
+                tools dan skill untuk
+                mengajarkan apa yang Anda sukai.</p>
+            <button type="button" class="btn bergabung-btn">Bergabung</button>
+        </div>
+    </div>
+    <!-- jumbotron end -->
+
+    <!-- footer start -->
+    <footer id="footer" class="footer-1">
+        <div class="main-footer widgets-dark typo-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget no-box">
+                            <img src="/img/logo-dark-navy.png" class="mb-3" height="50px" alt="">
+                            <p>BuildYourSkill - Kursus Online - Bangun skill kamu dimana saja dan kapanpun.</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget no-box">
+                            <h5 class="widget-title">Quick Links</h5>
+                            <ul class="thumbnail-widget">
+                                <li>
+                                    <div class="thumb-content"><a href="#">About Us</a></div>
+                                </li>
+                                <li>
+                                    <div class="thumb-content"><a href="#">careers</a></div>
+                                </li>
+                                <li>
+                                    <div class="thumb-content"><a href="#">Blog</a></div>
+                                </li>
+                                <li>
+                                    <div class="thumb-content"><a href="#">Help and Support</a></div>
+                                </li>
+                                <li>
+                                    <div class="thumb-content"><a href="#">Terms</a></div>
+                                </li>
+                                <li>
+                                    <div class="thumb-content"><a href="#">Privacy policy and cookie policy</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget no-box">
+                            <h5 class="widget-title">Get Started</h5>
+                            <p>Gabung sekarang dan pilih kelas yang kamu sukai.</p>
+                            <a class="btn daftar" href="#." target="_blank">Daftar Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget no-box">
+                            <h5 class="widget-title">Contact Us</h5>
+                            <p class="email"><a href="mailto:info@domain.com" title="glorythemes">info@domain.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
     <!-- javascript -->
     <script src="/js/jquery-3.3.1.slim.min.js"></script>
     <script src="/js/popper.min.js"></script>
