--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BUILDYOURSKILL</title>
+    <title>BuildYourSkill - Kursus Online - Bangun skill kamu dimana saja dan kapanpun</title>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -22,7 +22,6 @@
     <!-- icon font -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- icon font -->
-
 </head>
 
 <body>
@@ -88,14 +87,6 @@
                         class="d-block carousel-thumb" alt="...">
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </section>
     <!-- banner -->
@@ -341,7 +332,7 @@
                                     <div class="thumb-content"><a href="#">About Us</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="#">careers</a></div>
+                                    <div class="thumb-content"><a href="#">Careers</a></div>
                                 </li>
                                 <li>
                                     <div class="thumb-content"><a href="#">Blog</a></div>
@@ -362,13 +353,13 @@
                         <div class="widget no-box">
                             <h5 class="widget-title">Get Started</h5>
                             <p>Gabung sekarang dan pilih kelas yang kamu sukai.</p>
-                            <a class="btn daftar" href="#." target="_blank">Daftar Sekarang</a>
+                            <a class="btn daftar" href="#">Daftar Sekarang</a>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class=" col-xs-12 col-sm-6 col-md-3">
                         <div class="widget no-box">
                             <h5 class="widget-title">Contact Us</h5>
-                            <p class="email"><a href="mailto:info@domain.com" title="glorythemes">info@domain.com</a>
+                            <p class="email"><a href="mailto:info@domain.com">info@domain.com</a>
                             </p>
                         </div>
                     </div>
