--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <a class="nav-link" href="#">Features</a>
                     </li>
                     <span class="line">|</span>
-                    <button class="btn my-2 my-sm-0 login" type="submit">Login</button>
-                    <button class="btn my-2 my-sm-0 daftar " type="submit">Daftar</button>
+                    <button class="btn my-2 my-sm-0 login" onclick="location.href = 'login.html';">Login</button>
+                    <button class="btn my-2 my-sm-0 daftar" onclick="location.href = 'register.html';">Daftar</button>
                 </ul>
             </div>
         </div>
