--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
             <p class="lead">Instruktur top dari indonesia yang mengajar jutaan siswa di Buildyourskill. Kami memberikan
                 tools dan skill untuk
                 mengajarkan apa yang Anda sukai.</p>
-            <button type="button" class="btn bergabung-btn">Bergabung</button>
+            <button type="button" class="btn bergabung-btn"
+                onclick="location.href = 'register.html';">Bergabung</button>
         </div>
     </div>
     <!-- jumbotron end -->
@@ -353,7 +354,8 @@
                         <div class="widget no-box">
                             <h5 class="widget-title">Get Started</h5>
                             <p>Gabung sekarang dan pilih kelas yang kamu sukai.</p>
-                            <a class="btn daftar" href="#">Daftar Sekarang</a>
+                            <button class="btn my-2 my-sm-0 daftar" onclick="location.href = 'register.html';">Daftar
+                                Sekarang</button>
                         </div>
                     </div>
                     <div class=" col-xs-12 col-sm-6 col-md-3">
