--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-name">Agus yulistian</p>
                             <p class="card-text">Rp50.000</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="detail.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
