--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -207,7 +207,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -218,7 +218,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -229,7 +229,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -240,7 +240,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -251,7 +251,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -262,7 +262,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
@@ -273,7 +273,7 @@
                         <img src="/img/card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-name">Agus yulistian</p>
+                            <p class="card-name">Raya Taufik</p>
                             <p class="card-text">Rp50.000</p>
                             <a href="detail.html" class="stretched-link"></a>
                         </div>
