--- a/detail.html
+++ b/detail.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="detail-class-title">
                 <h1>Lorem Ipsum</h1>
-                <p>Create by Agus yulostin</p>
+                <p>Create by Raya Taufik</p>
             </div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8">
